.bubble.offscreen:after setting to fixed

--- a/css/main.css
+++ b/css/main.css
@@ -276,6 +276,21 @@ a {
     bottom:15px;
     top:auto;
 }
+
+.bubble.offscreen:after {
+    content: '';
+    position: fixed;
+    border-style: solid;
+    border-width: 15px 15px 0;
+    border-color: #FFFFFF transparent;
+    display: block;
+    width: 0;
+    z-index: 1;
+    margin-left: -15px;
+    bottom: 0;
+    left: 50%;
+}
+
 body{
     overflow-x:hidden;
 }
